# libauthor

./: LICENSE  README.md  pyproject.toml  requirements.txt
libauthor/: console.py  main.py
